# Tello-Drone-Web-Controller

./: .gitignore  LICENSE  README.md  pyproject.toml  start.bat  start.sh  test_start.bat
docs/: README.md  README_EN.md
src/: __init__.py  __main__.py
src/linetrace/: __init__.py  engine.py
src/qr/: __init__.py  reader.py
src/server/: __init__.py  app.py  ws_handler.py
src/server/static/css/: main.css
src/server/static/js/: app.js  controls.js  linetrace.js  video.js
src/server/templates/: index.html
src/tello/: __init__.py  state_receiver.py  udp_controller.py  video_receiver.py
