[project]
name = "web-drone-controller"
version = "0.1.0"
description = "Tello Drone Web Controller - WiFiバインド対応、LineTrace搭載"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "opencv-python>=4.10.0",
    "numpy>=1.26.0",
    "websockets>=13.0",
    "python-multipart>=0.0.12",
    "jinja2>=3.1.4",
    "pillow>=10.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

